# HEAN-META

./: .env.bak  .env.example  .env.fixes.example  .env.production  .env.production.example  .env.symbiont  .env.symbiont.example  .gitignore  .gitignore 2  .gitmodules  ABSOLUTE_PLUS_IMPLEMENTATION.md  ABSOLUTE_PLUS_QUICKSTART.md  ACTIVATION_SUMMARY.md  ADVANCED_STRATEGY_IMPROVEMENTS.md  AFO_DIRECTOR_IMPLEMENTATION_REPORT.md  AGENT_GENERATION_QUICKSTART.md  AGGRESSIVE_MODE_FIXES.md  ANIMATIONS_GUIDE_RU.md  ARCHON.md  AUDIT_RESULTS_SUMMARY.txt  AUTOMATION_COMPLETE.md  BACKTEST_30DAYS_STATUS.md  BYBIT_CONNECTION_FIXED.md  CHANGED_FILES.txt  CHANGELOG.md  CLAUDE.md  COMMAND_CENTER_IMPLEMENTATION.md  CONTAINERIZATION_COMPLETE.md  CONTRIBUTORS.md  CPP_BUILD_INSTRUCTIONS.md  CRITICAL_BUGS_FIXED.md  CRITICAL_FIXES_REPORT.md  DEGRADATION_FIX_REPORT.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_GUIDE.md  DOCKER_PHASE6_FIXES.md  DOCKER_QUICKSTART.md  DOCKER_QUICK_REFERENCE.md  DOCKER_VERIFICATION_REPORT.md  ENABLED_FEATURES_REPORT.md  (+147 more)
.claude/: settings.local.json
.claude/agents/: elite-problem-solver.md  gemini-research-solver.md  genius-world-engineer.md  hean-alpha-scout.md  hean-architect.md  hean-creative-director.md  hean-designer.md  hean-docker-archon.md  hean-execution-router.md  hean-market-microstructure-analyst.md  hean-motion-designer.md  hean-portfolio-rebalancer.md  hean-profit-optimizer.md  hean-risk-scenario-simulator.md  hean-strategy-lab.md  hean-test-hammer.md  hean-ui-sentinel.md  nonstandard-methods-seeker.md  omni-fusion.md  quantum-agent.md  quantum-mathematician.md  split-final-form.md
.github/workflows/: ci.yml  deploy_on_macos_runner.yml  docker-build-deploy.yml  ios_build.yml  security-scan.yml
EXPORT_BUNDLE/manifests/: excluded_paths.txt  export_meta.json  sha256_manifest.txt
EXPORT_BUNDLE/project_snapshot/: .env.bak.export.example  .env.export.example  AUTO_IMPROVEMENT_SYSTEM.md  BACKTEST_FIXES.md  (+32 more)
INFORMATION/: 01_GLOBAL_HFT_FUNDS_ANALYSIS.md  02_CRYPTO_MARKET_OPPORTUNITIES.md  07_UNCONVENTIONAL_ALPHA_SOURCES.md  09_HEAN_STRATEGY_GAP_ANALYSIS.md  QUICK_START_GUIDE.md
Real-time Trading Interface Design/: HEAN_README.md  README.md  package-lock.json
api/: Dockerfile  Dockerfile.dev  Dockerfile.optimized
control-center/: README.md  next.config.js  package.json  tailwind.config.js
dashboard/: COCKPIT_ARCHITECTURE_DIAGRAM.md  COCKPIT_FILES_MANIFEST.md  COCKPIT_IMPLEMENTATION_SUMMARY.md  COCKPIT_QUICK_START.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  verify_cockpit.sh
data/: autopilot_journal.duckdb  hean.duckdb  hean.duckdb.wal
docs/: API.md  ARCHITECTURE.md  ASSUMPTIONS.md  DOCKER_BUILD_GUIDE.md  GIT_WORKFLOW.md  INTEGRATION_GUIDE.md  ML_INTEGRATION_GUIDE.md  TDA_INTEGRATION.md  UI.md
examples/: backtesting_example.py  full_integration.py  generate_agent_example.py  ml_predictor_example.py  orderbook_analysis_example.py  phase2_advanced_example.py  phase3_advanced_example.py  phase3_monitoring_streaming_example.py  rl_trading_quickstart.py  talib_integration_example.py
hean_core/: Cargo.toml  pyproject.toml
hean_core/src/: clustering.rs  lib.rs  orderbook.rs  thermodynamics.rs  types.rs
hean_meta_cpp/: CMakeLists.txt  README.md  build.sh  setup.py
hean_meta_cpp/include/: common.h  order_engine.h  position_manager.h
hean_meta_cpp/python/: example.py
hean_meta_cpp/src/: bindings.cpp  order_engine.cpp  position_manager.cpp
hean_meta_cpp/tests/: test_orders.cpp
hft_core/: README.md  build_all.sh  run_all.sh
hft_core/cpp_indicators/: CMakeLists.txt
hft_core/cpp_indicators/src/: indicators.cpp
hft_core/rust_market_data/: Cargo.toml
hft_core/rust_order_router/: Cargo.toml
hft_core/rust_order_router/src/: main.rs
hft_core/rust_risk_engine/: Cargo.toml
hft_core/rust_risk_engine/src/: main.rs
ios/: BUILD_FIX_SUMMARY.md  COMPONENTS_VISUAL_GUIDE.md  DEPLOYMENT_COMPLETE.md  INTEGRATION_GUIDE.md  PHASE_4_IMPLEMENTATION_COMPLETE.md  PHASE_4_QUICK_REFERENCE.md  PROJECT_SUMMARY.md  QUICK_BUILD_GUIDE.md  QUICK_START.md  README.md
k8s/: api-deployment.yaml  configmap.yaml  namespace.yaml  redis-deployment.yaml  secret.yaml
market-data-service/: Cargo.toml  Dockerfile  README.md
market-data-service/src/: main.rs
market-data-service/src/api/: mod.rs
market-data-service/src/indicators/: mod.rs
market-data-service/src/websocket/: binance.rs
monitoring/: dashboard.json  prometheus.yml
rust_services/api_gateway/: Cargo.toml  Dockerfile
rust_services/api_gateway/src/: main.rs
scripts/: benchmark_keydb.py  deploy_local.sh  hean-beacon.sh  migrate_redis_to_keydb.py  run_ml_predictions.py  runner_setup_macos.md  setup_all.sh  smoke_test_small_capital.py  train_ml_model.py
tests/: __init__.py  stress_test_all.py  test_adaptive_allocator.py  test_adaptive_maker_router.py  test_api.py  test_api_e2e.py  test_api_routers.py  test_backtest.py  test_backtest_execution_metrics.py  test_capital_pressure.py  test_config.py  test_contracts.py  test_decision_memory.py  test_density.py  test_dynamic_risk.py  test_edge_confirmation.py  test_edge_estimator.py  test_evaluation.py  test_execution_diagnostics.py  test_execution_retry_queue.py  test_execution_volatility_gating.py  test_idempotency_resilience.py  test_impulse_filters.py  test_impulse_improvements.py  test_impulse_precision.py  test_maker_execution.py  test_maker_retry_queue.py  test_no_trade_fix.py  test_no_trade_report.py  test_no_trade_report_counters.py  test_openai_factory_hardening.py  test_paper_broker.py  test_paper_broker_maker_fill_model.py  test_paper_trade_assist.py  test_process_factory_schemas.py  test_process_factory_scorer.py  test_process_factory_selector.py  test_process_factory_storage.py  test_regime.py  test_risk.py  (+11 more)
web/: .dockerignore  QUICK_START.md  README.md  command-center.css  command-center.js  dashboard.html  dashboard.js  docker-compose.yml  eureka.html  eureka.js  god-mode-dashboard.html  god-mode-dashboard.js  topological_manifold_visualization.html  transcendent_entity.html
website/: package-lock.json  package.json
(+654 files in other folders)
