[package]
name = "hean_core"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust core for HEAN trading system"

[lib]
name = "hean_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
