[package]
name = "market-data-service"
version = "1.0.0"
edition = "2021"
authors = ["HEAN-META"]
description = "High-performance market data processing service in Rust"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# WebSocket
tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# gRPC (optional)
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }

# Technical indicators
ta = "0.5"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Metrics
prometheus = "0.13"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
url = "2.5"

[build-dependencies]
tonic-build = { version = "0.10", optional = true }

[features]
default = []
grpc = ["tonic", "prost", "tonic-build"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
