[package]
name = "market-data-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
