[package]
name = "risk-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
parking_lot = "0.12"
dashmap = "5.5"
thiserror = "1.0"
tracing = "0.1"
crossbeam = "0.8"
atomic = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "risk-engine"
path = "src/main.rs"
