[package]
name = "hean-api-gateway"
version = "2.0.0"
edition = "2021"
authors = ["HEAN Team"]
description = "Ultra-high-performance API gateway (6-8x faster than FastAPI)"

[dependencies]
# Web framework (60K+ req/s)
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }

# Serialization (ultra-fast JSON)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC for Python communication
tonic = "0.11"
prost = "0.12"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Metrics
prometheus = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
